(feature) Add functionality of fetch all authors and show exiting authors in list

--- a/library-system-frontend/src/app/app.component.html
+++ b/library-system-frontend/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="app-container">
   <header>
     <nav>
-      <a routerLink="/create">Create Author</a>
+      <a routerLink="/"create>Create Author</a>
+      <a routerLink="/author-all">Author List</a>
       <a routerLink="/details">Author Details</a>
     </nav>
   </header>
