--- a/library-system-frontend/src/app/author-details/author-details.component.scss
+++ b/library-system-frontend/src/app/author-details/author-details.component.scss
@@ -26,6 +26,10 @@
         }
     }
 
+    .author-book-container {
+        align-self: flex-start;
+    }
+
     .author-container {
         max-width: 400px;
         margin: 10px;
